# fasterrcnn_pytorch_api

./: .gitignore  .gitmodules  .stestr.conf  AUTHORS  ChangeLog  Jenkinsfile  LICENSE  README.md  example.ini  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
2023-05-10_121810/: events.out.tfevents.1683721090.mesos-agent-gpu9.18592.0  opt.yaml
2023-05-10_121810/mAP_mAP@0.5/: events.out.tfevents.1683725774.mesos-agent-gpu9.18592.1
2023-05-10_121810/mAP_mAP@0.5_0.95/: events.out.tfevents.1683725774.mesos-agent-gpu9.18592.2
bandit/: index.html
data/test_data/: submarin.yaml
fasterrcnn_pytorch_api/: api copy.py  api.py  config.py  fields.py  misc.py  utils.py  utils_api.py
fasterrcnn_pytorch_api/configs/: __init__.py  settings.ini
fasterrcnn_pytorch_api/scripts/: combineinfer.py  inference.py  jpg_xml.py  mlflow_inference.py  mlflow_train.py  output_mlflow_inference.py  train.py
fasterrcnn_pytorch_api/tests/: conftest.py  test_api.py  test_predictions.py  test_train.py
mlruns/0/: meta.yaml
src/fasterrcnn_pytorch_api/scripts/: train.py
submarine_det/: brackish.yaml
submarine_det/test_data/: submarin.yaml
tests/: conftest.py  test_metadata.py  test_predictions.py  test_train.py
wandb/: latest-run
wandb/run-20230707_130942-azki5pm0/: run-azki5pm0.wandb
wandb/run-20230707_132943-twgj2b5m/: run-twgj2b5m.wandb
wandb/run-20230707_135641-lwm50fj2/: run-lwm50fj2.wandb
wandb/run-20230710_111215-9ycb66j2/: run-9ycb66j2.wandb
wandb/run-20230710_111858-6lqi7cjq/: run-6lqi7cjq.wandb
wandb/run-20230710_163457-y7cg8hr5/: run-y7cg8hr5.wandb
(+64 files in other folders)
