# -*- coding: utf-8 -*-
[metadata]
name = fasterrcnn_pytorch_api
summary = Object detection using FasterRCNN model
description-file =
    README.md
author = Fahimeh
author-email = f.alibabaee@gmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/falibabaei//fasterrcnn_pytorch_api
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    fasterrcnn_pytorch_api

[entry_points]
deepaas.v2.model =
    fasterrcnn_pytorch_api = fasterrcnn_pytorch_api.api
